--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "debug": "3.1.0",
     "express": "4.16.3",
     "fs-extra": "6.0.1",
-    "request": "2.87.0",
-    "serve-favicon": "2.5.0"
+    "request": "2.87.0"
   }
 }
