--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@angular/platform-browser": "6.0.9",
     "@angular/platform-browser-dynamic": "6.0.9",
     "@angular/router": "6.0.9",
+    "@ng-bootstrap/ng-bootstrap": "2.2.0",
     "babel-core": "6.26.3",
     "babel-plugin-external-helpers": "6.22.0",
     "babel-polyfill": "6.26.0",
@@ -28,7 +29,6 @@
     "less": "3.7.1",
     "less-plugin-autoprefix": "1.5.1",
     "minimist": "1.2.0",
-    "ngx-bootstrap": "3.0.1",
     "pug": "2.0.3",
     "roboto-fontface": "0.9.0",
     "rollup": "0.63.4",
