--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "@angular/platform-browser": "6.0.9",
     "@angular/platform-browser-dynamic": "6.0.9",
     "@angular/router": "6.0.9",
-    "@ng-bootstrap/ng-bootstrap": "2.2.0",
+    "@ng-bootstrap/ng-bootstrap": "3.0.0-beta.1",
     "babel-core": "6.26.3",
     "babel-plugin-external-helpers": "6.22.0",
     "babel-polyfill": "6.26.0",
