--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,11 @@
     "@angular/platform-browser": "6.1.7",
     "@angular/platform-browser-dynamic": "6.1.7",
     "@angular/router": "6.1.7",
+    "@babel/core": "7.0.0",
+    "@babel/plugin-external-helpers": "7.0.0",
+    "@babel/polyfill": "7.0.0",
+    "@babel/preset-env": "7.0.0",
     "@ng-bootstrap/ng-bootstrap": "3.2.0",
-    "babel-core": "6.26.3",
-    "babel-plugin-external-helpers": "6.22.0",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.7.0",
     "bignumber.js": "7.2.1",
     "bootstrap": "4.1.3",
     "chokidar": "2.0.4",
@@ -30,9 +30,10 @@
     "less-plugin-autoprefix": "2.0.0",
     "minimist": "1.2.0",
     "pug": "2.0.3",
+    "reflect-metadata": "0.1.12",
     "roboto-fontface": "0.10.0",
     "rollup": "0.65.2",
-    "rollup-plugin-babel": "3.0.7",
+    "rollup-plugin-babel": "4.0.3",
     "rollup-plugin-commonjs": "9.1.0",
     "rollup-plugin-node-resolve": "3.4.0",
     "rxjs": "6.3.2",
