upgrade packages and dark mode style

--- a/client/bin/build
+++ b/client/bin/build
@@ -253,7 +253,7 @@ let copyFiles = () => {
             let packages = [
                 "bootstrap",
                 "roboto-fontface",
-                "font-awesome",
+                "@fortawesome",
                 "zone.js",
                 "@babel/polyfill",
             ]
