--- a/client/bin/build
+++ b/client/bin/build
@@ -266,6 +266,7 @@ let copyFiles = () => {
                     "@ng-bootstrap",
                     "systemjs",
                     "reflect-metadata",
+                    "ngx-facebook",
                 ])
 
             return Promise.all(packages.map(package => fs.copy(path.join(client, "node_modules", package), path.join(client, "target/node_modules", package))))
