--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "concurrently": "3.6.1",
     "cookie-parser": "1.4.3",
     "debug": "3.1.0",
+    "dotenv": "6.1.0",
     "express": "4.16.3",
     "request": "2.87.0"
   }
