--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   },
   "dependencies": {
     "body-parser": "1.18.3",
-    "compression": "1.7.2",
-    "concurrently": "3.6.1",
+    "client": "file:client",
+    "compression": "1.7.3",
+    "concurrently": "4.0.1",
     "cookie-parser": "1.4.3",
-    "debug": "3.1.0",
+    "debug": "4.1.0",
     "dotenv": "6.1.0",
-    "express": "4.16.3",
-    "request": "2.87.0"
+    "express": "4.16.4",
+    "request": "2.88.0"
   }
 }
