--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "7.1.0",
     "@fortawesome/fontawesome-free": "5.4.0",
     "@ng-bootstrap/ng-bootstrap": "3.3.0",
+    "@types/gapi.auth2": "0.0.48",
     "bignumber.js": "7.2.1",
     "bootstrap": "4.1.3",
     "chokidar": "2.0.4",
