--- a/bin/build
+++ b/bin/build
@@ -41,3 +41,8 @@ tar -cz \
     ./*
 
 echo "Dashboard build completed."
+
+if [ "$1" == "-s" ] || [ "$1" == "--sync" ]; then
+    cp ${ARCHIVE} /Users/jordanluyke/Documents/sync/reversi
+    echo "Copied to sync/reversi"
+fi
