--- a/client/package.json
+++ b/client/package.json
@@ -27,13 +27,13 @@
     "chokidar": "3.0.2",
     "fs-extra": "8.1.0",
     "glob": "7.1.4",
+    "lato-font": "3.0.0",
     "less": "3.10.1",
     "less-plugin-autoprefix": "2.0.0",
     "minimist": "1.2.0",
     "ngx-facebook": "2.4.0",
     "pug": "2.0.4",
     "reflect-metadata": "0.1.13",
-    "roboto-fontface": "0.10.0",
     "rollup": "1.19.4",
     "rollup-plugin-babel": "4.3.3",
     "rollup-plugin-commonjs": "10.0.2",
