--- a/client/bin/build
+++ b/client/bin/build
@@ -14,7 +14,7 @@ const nodeResolve = require('rollup-plugin-node-resolve')
 const commonjs = require('rollup-plugin-commonjs')
 const babel = require('rollup-plugin-babel')
 const util = require('util')
-const tslint = require('tslint')
+const eslint = require('eslint')
 
 const client = path.join(__dirname, "..")
 const autoprefixPlugin = new LessPluginAutoPrefix({browsers: ["last 99 versions"]})
@@ -254,7 +254,6 @@ let copyFiles = () => {
                 "bootstrap",
                 "@fortawesome",
                 "zone.js",
-                "@babel/polyfill",
                 "lato-font",
                 "pusher-js",
             ]
@@ -267,7 +266,7 @@ let copyFiles = () => {
                     "@ng-bootstrap",
                     "systemjs",
                     "reflect-metadata",
-                    "ngx-facebook",
+                    "angularx-social-login",
                 ])
 
             return Promise.all(packages.map(package => fs.copy(path.join(client, "node_modules", package), path.join(client, "target/node_modules", package))))
@@ -281,16 +280,14 @@ let lint = (file) => {
         fix: false,
         formatter: "json"
     }
-    let linter = new tslint.Linter(options)
-    let configuration = tslint.Configuration.findConfiguration(path.join(client, "tslint.json")).results
+    let linter = new eslint.Linter(options, path.join(client, "eslint.json"))
 
     let lintFile = (file) => {
         return new Promise((resolve, reject) => fs.readFile(file, "utf8")
             .then(source => {
-                linter.lint(path.basename(file), source, configuration)
-                let result = linter.getResult()
-                if(result.errorCount > 0) {
-                    result.failures.forEach(failure => {
+                let messages = linter.verify(path.basename(file), source)
+                if(messages.errorCount > 0) {
+                    messages.failures.forEach(failure => {
                         let startLine = failure.startPosition.lineAndCharacter.line + 1
                         let message = failure.failure
                         console.log(`Error ${path.relative(client, file)} line ${startLine}: ${message}`)
@@ -328,11 +325,7 @@ let bundle = () => {
             }),
             commonjs({
                 include: [
-                    "rxjs/**",
-                    "@ng-bootstrap/**",
                     "bignumber.js/bignumber.js",
-                    "@ng-bootstrap/**",
-                    "ngx-facebook/**",
                     'pusher-js/dist/web/pusher.js',
                 ]
                     .map(p => path.join(client, "node_modules", p)),
@@ -349,7 +342,13 @@ let bundle = () => {
                     }, {})
             }),
             babel({
-                presets: ["@babel/preset-env"],
+                presets: ["@babel/preset-env", {
+                    corejs: {
+                        version: 3,
+                        proposals: true
+                    },
+                    useBuiltIns: "usage",
+                }],
                 plugins: ["@babel/plugin-external-helpers"],
                 include: path.join(client, "node_modules"),
                 comments: false,
