--- a/client/package.json
+++ b/client/package.json
@@ -4,46 +4,49 @@
   "private": true,
   "main": "site/index.html",
   "scripts": {
-    "start": "node bin/build"
+    "start": "node bin/build",
+    "postinstall": "ngcc"
   },
   "dependencies": {
-    "@angular/common": "8.2.2",
-    "@angular/compiler": "8.2.2",
-    "@angular/compiler-cli": "8.2.2",
-    "@angular/core": "8.2.2",
-    "@angular/forms": "8.2.2",
-    "@angular/platform-browser": "8.2.2",
-    "@angular/platform-browser-dynamic": "8.2.2",
-    "@angular/router": "8.2.2",
-    "@babel/core": "7.5.5",
-    "@babel/plugin-external-helpers": "7.2.0",
-    "@babel/polyfill": "7.4.4",
-    "@babel/preset-env": "7.5.5",
-    "@fortawesome/fontawesome-free": "5.12.1",
-    "@ng-bootstrap/ng-bootstrap": "5.1.0",
-    "@types/gapi.auth2": "0.0.51",
+    "@angular/common": "9.1.11",
+    "@angular/compiler": "9.1.11",
+    "@angular/compiler-cli": "9.1.11",
+    "@angular/core": "9.1.11",
+    "@angular/forms": "9.1.11",
+    "@angular/localize": "9.1.11",
+    "@angular/platform-browser": "9.1.11",
+    "@angular/platform-browser-dynamic": "9.1.11",
+    "@angular/router": "9.1.11",
+    "@babel/core": "7.10.2",
+    "@babel/plugin-external-helpers": "7.10.1",
+    "@babel/preset-env": "7.10.2",
+    "@fortawesome/fontawesome-free": "5.13.0",
+    "@ng-bootstrap/ng-bootstrap": "6.1.0",
+    "@types/gapi.auth2": "0.0.52",
     "@types/pusher-js": "4.2.2",
+    "angularx-social-login": "3.0.0",
     "bignumber.js": "9.0.0",
-    "bootstrap": "4.4.1",
-    "chokidar": "3.3.1",
-    "fs-extra": "8.1.0",
+    "bootstrap": "4.5.0",
+    "chokidar": "3.4.0",
+    "core-js": "3.6.5",
+    "eslint": "7.2.0",
+    "fs-extra": "9.0.1",
     "glob": "7.1.6",
     "lato-font": "3.0.0",
-    "less": "3.11.1",
+    "less": "3.11.3",
     "less-plugin-autoprefix": "2.0.0",
     "minimist": "1.2.5",
-    "ngx-facebook": "2.4.0",
-    "pug": "2.0.4",
-    "pusher-js": "5.1.1",
+    "pug": "3.0.0",
+    "pusher-js": "6.0.3",
     "reflect-metadata": "0.1.13",
-    "rollup": "2.1.0",
+    "regenerator-runtime": "0.13.5",
+    "rollup": "2.16.1",
     "rollup-plugin-babel": "4.4.0",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-node-resolve": "5.2.0",
-    "rxjs": "6.5.4",
+    "rxjs": "6.5.5",
     "systemjs": "0.21.4",
-    "tslint": "6.1.0",
-    "typescript": "3.5.3",
-    "zone.js": "0.9.1"
+    "typescript": "3.8.3",
+    "zone.js": "0.10.3"
   }
 }
