--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
     "typescript.tsdk": "./client/node_modules/typescript/lib",
     "search.exclude": {
-        "node_modules/**": true,
-        "target/**": true,
-        "client/node_modules/**": true,
-        "client/target/**": true
+        "**/.git/**": true,
+        "**/node_modules/**": true,
+        "**/target/**": true
+    },
+    "files.watcherExclude": {
+        "**/.git/**": true,
+        "**/node_modules/**": true,
+        "**/target/**": true
     }
 }
